# pool-master

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Infrastructure.md  README.md  dkctniqqqrjtl5m1iugeesrvnuukq9td  eslint.config.js  m8k7dhqtejmupf0qumafkrfqkrjrq4hr  manifest  package-lock.json  package.json  pyproject.toml  tdimiemhmrmahdqbdabqv2pobksn54aq.darc  uie0dfcvo4dialubsgetrcraqtrrsbji
.beads/: config.yaml  issues.jsonl  metadata.json
.claude/: settings.json
.github/: pull_request_template.md
agents/: application-specification-builder.md  architect-platform.md  architect.md  backend-developer.md  code-reviewer.md  data-modeler.md  frontend-developer.md  product-discovery.md  product-manager.md  project-manager.md  qa-test-engineer.md  technical-specification-creator.md  test-planner.md
brand/: README.md  index.html
code-review/: 001-poolmaster-webapp-full-review.md  002-invite-aware-auth-entry-flow.md  003-ci-cd-database-migration-architecture.md  004-migration-failure-pattern-analysis.md  005-e2e-failure-and-csrf-flow-hardening.md  006-e2e-failure-after-singleton-fix.md  007-e2e-failure-explicit-league-code.md
docs/: ARCHITECTURE.md  AUTHENTICATION-AUTHORIZATION.md  CI-AND-QUALITY-GATES.md  CONTEST-RULES.md  DATABASE-SCHEMA-V2.md  DATABASE-SCHEMA.md  DEVELOPER-SETUP.md  EMAIL-DELIVERY.md  HONEST-CONTRACT-REMEDIATION.md  LOGGING-OPERATIONS.md  PERSONA-FLOW.md  QA-CLEANUP-RUNBOOK.md  SESSION-HANDOFF.md  STANDARD-AUTH-MODEL.md  SYNC-GUIDE.md  frontend-defect-trends.md  league-contest-substrate-audit.md  scoring-and-configuration-guide.md
personas/: archie.md  brad.md  dom.md  fran.md  pam.md  piper.md  quinn.md  riley.md  sage.md  tess.md  tom.md
plans/: 01-poolmaster-architecture.md  01a-poolmaster-contest-structures-merged.md  02-poolmaster-draft-config.md  02a-poolmaster-contest-structures.md  03-poolmaster-scoring-rules.md  04-poolmaster-history.md  05-poolmaster-participant-data.md  05-poolmaster-sports-data-integration.md  06-poolmaster-participant-data.md  06-poolmaster-sports-data-integration.md  07-poolmaster-billing-subscription.md  08-poolmaster-commissioner-tooling.md  09-poolmaster-notifications-alerts.md  10-poolmaster-social-communication.md  100-product-discovery-and-requirements-structure.md  101-root-admin-event-sync-surface.md  102-mock-provider-lifecycle-alignment.md  102-use-case-coverage-remediation.md  102-webapp-logging-observability.md  103-feed-aware-ingestion-harness.md  103-service-logging-standardization.md  104-ingestion-config-persistence.md  105-test-data-hygiene-and-shared-qa-browser-fixtures.md  106-root-admin-elevation-and-manage-entry.md  107-webapp-navigation-reorganization.md  108-manage-hub-decomposition.md  109-team-relationship-contract-pattern.md  11-poolmaster-admin-dashboard.md  110-league-relationship-contract-pattern.md  111-persona-library-restructure.md  112-ses-system-email-integration.md  113-provider-ports-and-adapters-integration.md  114-mock-provider-real-api-mirroring.md  (+105 more)
rules/: swift-rules.md  (+15 more)
services/core-api/: pyproject.toml
services/core-api/alembic/: alembic.ini  env.py
services/core-api/app/: __init__.py  config.py  main.py
services/core-api/app/api/: health.py  leagues.py
services/draft-service/: pyproject.toml
services/draft-service/app/: __init__.py  main.py
services/ingestion-worker/: pyproject.toml
services/ingestion-worker/app/: __init__.py  main.py
services/notification-service/: pyproject.toml
services/notification-service/app/: __init__.py  main.py
services/scoring-service/: pyproject.toml
services/scoring-service/app/: __init__.py  main.py
(+1252 files in other folders)
