[project]
name = "poolmaster"
version = "0.1.0"
description = "Multi-tenant fantasy sports pool management platform"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "services/core-api",
    "services/draft-service",
    "services/scoring-service",
    "services/ingestion-worker",
    "services/notification-service",
    "packages/shared",
]

[tool.uv.sources]
poolmaster-shared = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "factory-boy>=3.3",
    "faker>=30.0",
    "freezegun>=1.4",
    "respx>=0.22",
    "testcontainers>=4.0",
    "moto[s3,sqs,dynamodb]>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (fast, mocked dependencies)",
    "integration: Integration tests (real DB via testcontainers)",
    "api: API tests (full HTTP request/response)",
    "e2e: End-to-end tests (multi-service, staging)",
]
addopts = "--strict-markers -ra"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["services", "packages"]
omit = ["tests/*", "*/alembic/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
