[project]
name = "poolmaster-core-api"
version = "0.1.0"
description = "PoolMaster Core API — auth, leagues, memberships, contests, standings"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "redis>=5.2",
    "poolmaster-shared",
]
