[project]
name = "poolmaster-ingestion-worker"
version = "0.1.0"
description = "PoolMaster Ingestion Worker — polls/receives sport data, normalises, publishes events"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "redis>=5.2",
    "celery[redis]>=5.4",
    "poolmaster-shared",
]
