[project]
name = "poolmaster-notification-service"
version = "0.1.0"
description = "PoolMaster Notification Service — push, email, in-app notifications"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "redis>=5.2",
    "celery[redis]>=5.4",
    "httpx>=0.27",
    "poolmaster-shared",
]
